Added having a good time

--- a/_posts/0000-01-12-scaissie13.md
+++ b/_posts/0000-01-12-scaissie13.md
@@ -4,6 +4,7 @@ title: "Welcome to our slide deck!"
 ---
 
 Eat at Joes
+Good times
 
 ![cherryontop-o-cat](https://octodex.github.com/images/cherryontop-o-cat.png)
 {: .center}
