--- a/_posts/0000-01-09-LMarley.md
+++ b/_posts/0000-01-09-LMarley.md
@@ -3,7 +3,7 @@ layout: slide
 title: "Welcome to our slide deck!"
 ---
 
-Hello, World!
+Good-bye...
 
 ![poptocat](https://octodex.github.com/images/poptocat.png)
 {: .center}
