--- a/_posts/0000-01-12-scaissie13.md
+++ b/_posts/0000-01-12-scaissie13.md
@@ -5,6 +5,7 @@ title: "Welcome to our slide deck!"
 
 Eat at Joes
 Good times
+I'm ignoring your change suggestions
 
 ![cherryontop-o-cat](https://octodex.github.com/images/cherryontop-o-cat.png)
 {: .center}
